<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_docking</name>
  <version>0.1.0</version>
  <description>The auto_dock package</description>
  <maintainer email="annhunter201@gmail.com">H-HChen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>apriltag_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>  
  <depend>apriltag</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>autodock_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
